# llama-models

./: .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  CNAME  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.Webi3  README.md  SECURITY.md  class.md  models  newExample.txt  pyproject.toml  requirements.txt  setup.py  spider.html
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: gha_workflow_llama_models_tests.yml  publish-to-test-pypi.yml  run-tokenizer-tests.yml  run-tool-utils-test.py
.ipynb_checkpoints/: README-checkpoint.md
AUP/: LLAMA2_USE_POLICY.md  LLAMA3.1_USE_POLICY.md  LLAMA3_USE_POLICY.md
License/: Llama2.txt  Llama3.1.txt
Model Cards/: Llama3.1.md
Model_Cards/: Llama3.1.md
docs/: license_header.txt
llama2/: README.md
llama_models/llama2/: LICENSE  MODEL_CARD.md
llama_models/llama3/: MODEL_CARD.md  USE_POLICY.md
llama_models/llama3_1/: MODEL_CARD.md  prompt_format.md
llama_models/llama3_2/: USE_POLICY.md  eval_details.md  prompts_vision.py  text_prompt_format.md  vision_prompt_format.md
llama_models/scripts/: example_text_completion.py  generate_prompt_format.py  multimodal_example_chat_completion.py  multimodal_example_text_completion.py
models/: MITRE  checkpoint.py  datatypes.py  prompt_format.py  quantize_impls.py  schema_utils.py  sku_list.py  tokenizer_utils.py
models/jax_utils/: modeling_flax_pytorch_utils.py
models/llama2/: MODEL_CARD.md
models/llama3/: LICENSE  MODEL_CARD.md  README.md  args.py  chat_format.py  generation.py  model.py  requirements.txt  tokenizer.py  tool_utils.py
models/llama3/api/: args.py  (+8 more)
models/llama3_1/: MODEL_CARD.md  README.md  USE_POLICY.md  download.bat  download.ps1  download.sh  eval_details.md  example_chat_completion.py  example_text_completion.py  prompts.py  requirements.txt
models/llama3_2/: LICENSE  MODEL_CARD.md  MODEL_CARD_VISION.md  eval_details.md  prompts_text.py  prompts_vision.py  text_prompt_format.md
models/llama3_3/: LICENSE  MODEL_CARD.md  USE_POLICY.md  eval_details.md  prompt_format.md  prompts.py
models/llama4/: LICENSE  MODEL_CARD.md  args.py  chat_format.py  checkpoint.py  datatypes.py  ffn.py  generation.py  model.py  moe.py  preprocess.py  prompt_format.md  tokenizer.py
models/llama4_jax/: LICENSE  MODEL_CARD.md  USE_POLICY.md  chat_format.py  checkpoint.py  common_types.py  datatypes.py  ffn.py  generation.py  model.py  moe.py  preprocess.py  tokenizer.model  tokenizer.py
models/scripts/: example_chat_completion.py  example_text_completion.py  generate_prompt_format.py  lg_vision.py  (+2 more)
(+70 files in other folders)
